--- a/projects/ngx-dt-table/package.json
+++ b/projects/ngx-dt-table/package.json
@@ -20,8 +20,9 @@
     "grid",
     "datagrid"
   ],
-  "version": "0.0.5-1",
+  "version": "0.0.6",
   "peerDependencies": {
+    "@angular/cdk": "^11.0.1",
     "@angular/common": "^11.0.1",
     "@angular/core": "^11.0.1"
   },
