--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build_demo": "ng build --prod --aot --base-href=/ngx-dt-table/ --output-path=docs",
-    "prepublish_lib": "ng build --prod ngx-dt-table && cp README.md dist/ngx-dt-table",
+    "build_demo": "ng build --configuration=production --aot --base-href=/ngx-dt-table/ --output-path=docs",
+    "prepublish_lib": "ng build --configuration=production ngx-dt-table && cp README.md dist/ngx-dt-table",
     "publish_lib": "cd dist/ngx-dt-table && pnpm publish",
     "test": "ng test",
     "lint": "ng lint",
@@ -13,45 +13,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.0.2",
-    "@angular/cdk": "^12.0.2",
-    "@angular/common": "~12.0.2",
-    "@angular/compiler": "~12.0.2",
-    "@angular/core": "~12.0.2",
-    "@angular/forms": "~12.0.2",
-    "@angular/material": "^12.0.2",
-    "@angular/platform-browser": "~12.0.2",
-    "@angular/platform-browser-dynamic": "~12.0.2",
-    "@angular/router": "~12.0.2",
-    "angular-material-extended": "^1.1.1",
-    "delay": "^4.4.0",
+    "@angular/animations": "~13.3.3",
+    "@angular/cdk": "^13.3.3",
+    "@angular/common": "~13.3.3",
+    "@angular/compiler": "~13.3.3",
+    "@angular/core": "~13.3.3",
+    "@angular/forms": "~13.3.3",
+    "@angular/material": "^13.3.3",
+    "@angular/platform-browser": "~13.3.3",
+    "@angular/platform-browser-dynamic": "~13.3.3",
+    "@angular/router": "~13.3.3",
+    "angular-material-extended": "^13.0.0",
+    "delay": "^4.4.1",
     "dot-prop": "^6.0.1",
-    "highlight.js": "^10.4.0",
+    "highlight.js": "^10.7.3",
     "highlightjs-line-numbers.js": "^2.8.0",
-    "ngx-highlightjs": "^4.1.2",
-    "ngx-pipes": "^2.7.5",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.2.0",
-    "zone.js": "~0.11.4"
+    "ngx-highlightjs": "^4.1.4",
+    "ngx-pipes": "^3.0.0",
+    "rxjs": "~6.6.7",
+    "tslib": "^2.3.1",
+    "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.1",
-    "@angular/cli": "~12.0.1",
-    "@angular/compiler-cli": "~12.0.2",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
+    "@angular-devkit/build-angular": "~13.3.3",
+    "@angular/cli": "~13.3.3",
+    "@angular/compiler-cli": "~13.3.3",
+    "@types/jasmine": "~3.6.11",
+    "@types/node": "^12.20.48",
+    "codelyzer": "^6.0.2",
     "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.2",
-    "karma-chrome-launcher": "~3.1.0",
+    "jasmine-spec-reporter": "~5.0.2",
+    "karma": "~6.3.18",
+    "karma-chrome-launcher": "~3.1.1",
     "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^12.0.2",
+    "karma-jasmine": "~4.0.2",
+    "karma-jasmine-html-reporter": "^1.7.0",
+    "ng-packagr": "^13.3.1",
     "protractor": "~7.0.0",
+    "raw-loader": "^4.0.2",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.2.4"
+    "tslint": "~6.1.3",
+    "typescript": "~4.6.3",
+    "webpack": "^5.72.0"
   }
 }
