--- a/projects/ngx-dt-table/package.json
+++ b/projects/ngx-dt-table/package.json
@@ -1,7 +1,8 @@
 {
   "name": "ngx-dt-table",
-  "description": "Angular 11+ Datatable/Grid component for presenting large and complex data.",
+  "description": "Angular 13+ Datatable/Grid component for presenting large and complex data.",
   "repository": "https://github.com/luisvt-angular/ngx-dt-table",
+  "license": "MIT",
   "keywords": [
     "ngx-dt-table",
     "angular-datatable",
@@ -20,14 +21,14 @@
     "grid",
     "datagrid"
   ],
-  "version": "0.0.9",
+  "version": "13.0.0",
   "peerDependencies": {
-    "@angular/cdk": "^12.0.0",
-    "@angular/common": "^12.0.0",
-    "@angular/core": "^12.0.0"
+    "@angular/cdk": "^13.0.0",
+    "@angular/common": "^13.0.0",
+    "@angular/core": "^13.0.0"
   },
   "dependencies": {
-    "delay": "^4.4.0",
+    "delay": "^4.4.1",
     "dot-prop": "^6.0.1",
     "tslib": "^2.0.0"
   }
